# xapi_converter

./: BSD-LICENSE  CMakeLists.txt  LICENSE.txt  README.md
attendance/: CMakeLists.txt
attendance/include/: xapi_attend.h  xapi_converter_attendance.h
attendance/src/: xapi_attend.cpp  xapi_converter_attendance.cpp
cmake/Modules/: FindB64.cmake  FindCurlpp.cmake
common/: CMakeLists.txt
common/include/: xapi_anonymizer.h  xapi_converter.h  xapi_entry.h  xapi_errors.h
common/src/: json_append_info.cpp  json_filter_students.cpp  json_merge_arrays.cpp  json_parser.cpp  json_prettifier.cpp  json_unprettifier.cpp  xapi_converter.cpp  xapi_entry.cpp
devops/: CMakeLists.txt
devops/include/: xapi_commit.h  xapi_converter_devops.h  xapi_memo.h  xapi_wikiupdate.h  xapi_workitemactivity.h
devops/src/: json_merge_projectdata_into_value_elements.cpp  xapi_commit.cpp  xapi_converter_devops.cpp  xapi_converter_memo.cpp  xapi_wikiupdate.cpp  xapi_workitemactivity.cpp
duedates/: CMakeLists.txt
duedates/src/: all_assignments_status.cpp
include/: xapi_activityentry.h  xapi_anonymizer.h  xapi_assignmentinit.h  xapi_converter.h  xapi_entry.h  xapi_errors.h  xapi_grade.h  xapi_roleassign.h  xapi_statementfactory.h
memo/: CMakeLists.txt
memo/include/: xapi_converter_memo.h  xapi_memo.h
memo/src/: xapi_converter_memo.cpp  xapi_memo.cpp
moodle/: CMakeLists.txt
moodle/include/: xapi_activityentry.h  xapi_assignmentinit.h  xapi_converter_moodle.h  xapi_grade.h  xapi_statementfactory.h  xapi_usercache_diff.h  xapi_usercacheapp.h  xapi_usercachecombiner.h
moodle/src/: xapi_activityentry.cpp  xapi_assignmentinit.cpp  xapi_converter_moodle.cpp  xapi_grade.cpp  xapi_statementfactory.cpp  xapi_usercache_diff.cpp  xapi_usercacheapp.cpp  xapi_usercachecombiner.cpp
src/: base64_encode.cpp  json_prettifier.cpp  xapi_activityentry.cpp  xapi_assignmentinit.cpp  xapi_converter.cpp  xapi_entry.cpp  xapi_grade.cpp  xapi_roleassign.cpp  xapi_statementfactory.cpp
vipuvarsi/: CMakeLists.txt
vipuvarsi/include/: xapi_converter_vipuvarsi.h  xapi_credits.h
vipuvarsi/src/: xapi_converter_vipuvarsi.cpp  xapi_creditcombiner.cpp  xapi_credits.cpp
