cmake_minimum_required(VERSION 3.8.2)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -O3 -fopenmp" )
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall -O3 -fopenmp -fomit-frame-pointer")
set(CMAKE_CXX_FLAGS         "${CMAKE_CXX_FLAGS} -Wall -O3 -fopenmp -fomit-frame-pointer")
project(xapi_converter)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
find_package(Curlpp REQUIRED)
find_package(CURL REQUIRED)
find_package(B64 REQUIRED)
find_package(Boost REQUIRED program_options )
find_package(nlohmann_json REQUIRED)
#include_directories(xapi_converter PUBLIC common/include ${CURLPP_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
#set(LIBS ${LIBS} ${CURLPP_LIBRARIES} ${CURL_LIBRARIES} ${Boost_LIBRARIES})
message( STATUS "Building with CXXFLAGS ${CMAKE_CXX_FLAGS}")
add_subdirectory(common)
add_subdirectory(moodle)
add_subdirectory(vipuvarsi)
